fix: Bug where container was too wide on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -31,4 +31,5 @@ body {
 .container {
   margin: 0 auto;
   width: 970px;
+  max-width: calc(100vw - 30px);
 }
